# Copyright 2025 Alex313031

group("usbview_all") {
  public_deps = [
    ":usbview",
    ":usbview_static",
  ]
}

executable("usbview") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [
    "//build/config/win:windowed_subsystem",
    ":usbview_config",
  ]
  sources = [
    "src/devnode.c",
    "src/dispaud.c",
    "src/display.c",
    "src/enum.c",
    "src/globals.h",
    "src/resource.h",
    "src/usbdesc.h",
    "src/usbview.c",
    "src/usbview.h",
    "src/usbview.rc",
    "src/vndrlist.h",
    "src/version.h",
  ]
  deps = [
    ":usbview_static",
  ]
}

config("usbview_config") {
  include_dirs = [
    "./src",
  ]
  libs = [
    "cfgmgr32",
    "setupapi",
  ]
}

static_library("usbview_static") {
  sources = [
    "src/debug.c",
    "src/globals.h",
    "src/usbview.h",
    "src/version.h",
  ]
}
